--- a/TareaAndroid3/Tarea3/app/src/main/res/values/strings.xml
+++ b/TareaAndroid3/Tarea3/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_main_activity2confragment">MainActivity2confragment</string>
+    <string name="title_activity_main_activit2">MainActivity2Activity</string>
 </resources>
